--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,116 +1,60 @@
+/*STORT*/
 body{
     overflow: hidden;
-   /* background-color: tomato;
-    position:absolute;*/
-    font-size: 2rem;
+    position:absolute;
+    font-size: 1rem;
 }
-
-
+.ikon{
+    height:100%;
+    width:auto;
+    position:fixed;
+    left:25%;
+}
+.background{
+    position:fixed;
+}
 main{
     display:block;
     position: fixed;
 }
-.ikon{
-    height:100%;
-    position:absolute;
-    left:25%;
-}
+/**/
 
+
+/*NAV RELATERAT*/
 .navHållare{
-    font-size:3vw;
     display:grid;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 1fr 1fr 8fr;
-    height:100vh
 }
-.navTitle{
-    font-size: 2vw;
+.navTitel{
+    font-size: 3rem;
 }
-.aboutList{
+.navTitel a:hover{
+    margin-left: 1rem;
+}
+.navLista{
     opacity:1;
     list-style: none;
     padding-left: 0;
-    font-size: 0.1vw;
 }
-/*
-
-.navHållare{
-    display:grid;
-    grid-template-rows: 1fr 10fr;
-    /*;
-    width:20%;
-    left:80vw;
-    z-index:55;
+.navknappHållare{
+    grid-row:1;
     top:0;
-    position:relative;
-    transition:left 1s;
-}/*
-nav{
-    display:grid;
-    padding-left:1rem;
-    grid-template-columns:1fr;
-    grid-column:2;
-    grid-row: 1/3;
-    height:100%;
-    background-image: linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgba(54, 52, 52, 1));
-
-}*/
-/*
+}
 .fa-bars{
-    font-size: 3vw;
-    position:relative;
-    left:25%;
-    top:10%;
+    top:auto;
+    left:auto;
+    margin:1rem;
 }
-.coverUp{
-    width:5vw;
-    grid-column: 1;
-    grid-row: 1;
-    border-bottom-left-radius: 1rem;
-    background-color:rgba(241, 238, 238, 0.8);
-}
-.navItemF{
-    grid-column: 1;
-    height:97%;
-    position:static;
-    background-image: none;
-    transition:none;
-    transition-duration: 0s;
-}
-
-.navItemF:hover{
-    height:100%;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-    padding-top:0;
-
-}
-.aboutList{
-    opacity:1;
-    font-size: inherit;
-}
-
-.navItem:hover .navTitle{
-    font-size: 100%;
-}
-.navItemF:nth-child(1) .navTitle{
-    font-size: 220%;
-}
-
-.navTitle a{
-    color:rgb(35, 49, 245);
-}*/
+/**/
 
 
-
-article{
-    width:100%;
-    text-align: center;
-    border-radius: 0;
-    opacity:1;
-}
+/*SLIDES*/
 .slide{
-    margin:0;
+    width:100vw;
+    text-align: center;
+    opacity:1;
+    font-size: 2rem;
     height: 100vh;
     position: fixed;
     top:120vh;
@@ -119,8 +63,10 @@ article{
     grid-template-rows: repeat(3, 1fr);
     transition:top 2s, opacity 3s;
 }
+/**/
 
 
+/*SLIDE FÄRGER OCH DEFINIERINGAR*/
 .dark{
     background-color: rgba(0, 0, 0, 0.95);
     color:white;
@@ -137,17 +83,18 @@ article{
 .gray{
     background-color: rgba(169, 169, 169, 0.95);
     color:white;
-    /*text-shadow: 2px 2px 2px white;*/
 }
 .gray:hover{
     background-color: rgba(169, 169, 169, 0.95);
 }
-
 .ett{
     z-index:0;
     top:0;
 }
+/**/
 
+
+/*DIVERSE*/
 p{
     margin:0;
     padding:auto;
@@ -156,17 +103,16 @@ p{
 img{
     margin: auto;
 }
-footer{
-    height:100%;
-    text-align: left;
-    border:none;
-}
 footer p{
     border:none;
 }
+footer{
+    text-align: start;
+}
+/**/
 
 
-/*Grid placerar klasser*/
+/*PLACERA INNEHÅLL I SLIDES*/
 .topLeft{
     grid-column:1;
     grid-row:1;
@@ -179,8 +125,6 @@ footer p{
     grid-column:3;
     grid-row:1/3;
 }
-
-
 .top{
     grid-row:1;
 }
@@ -205,13 +149,8 @@ footer p{
 .xSpan3{
     grid-column: 1/4;
 }
-
 .botLeft{
-    grid-column:1/3;
-    grid-row:3;
-}
-.botRight{
-    grid-column:3;
+    grid-column:1;
     grid-row:2/4;
 }
 .topMid{
@@ -221,21 +160,4 @@ footer p{
 .column{
     display:flex;
     flex-direction: column;
-}
-
-
-
-
-@media (max-width:1000px){
-    nav{
-        grid-column:2;
-        grid-template-columns:1fr;
-        height:100vh;
-        width:100%;
-        position:sticky;
-        transition:left 1s;
-    }
-    nav:hover{
-        left:-30vw;
-    }
 }
